Fixed link to CONDUCT.md

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="https://www.meetup.com/nycpython">Join Us On Meetup!</a></li>
-                <li><a href="assets/CONDUCT.md/">Code of Conduct</a></li>
+                <li><a href="assets/CONDUCT.md">Code of Conduct</a></li>
             </ul>
         </nav>
     </div>
