--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="https://www.meetup.com/nycpython">Join Us On Meetup!</a></li>
-                <li><a href="assets/CONDUCT.md/">Code of Conduct</a></li>
+        <nav class='navbar'>
+            <ul class='navbar'>
+                <li class='navbar'><a href="index.html">Home</a></li>
+                <li class='navbar'><a href="about.html">About</a></li>
+                <li class='navbar'><a href="https://www.meetup.com/nycpython">Join Us On Meetup!</a></li>
+                <li class='navbar'><a href="assets/CONDUCT.md">Code of Conduct</a></li>
             </ul>
         </nav>
     </div>
     <div>
-        <h1 id="h1_index">NYC Python!</h1>
+        <h1 id="header">NYC Python!</h1>
         <p>
             Meet other local Python Programming Language enthusiasts!
         </p>
